--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-    <div class="contenedor">
+    <div class="contenedor column-drop-css">
         <main>
             <h1>Titulo 1ra Columna</h1>
             <p>
@@ -19,12 +19,12 @@
             </p>
         </main>
 
-        <aside>
+        <aside class="primera">
             <h1>Titulo 2da Columna</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque quis ab quaerat magnam eligendi esse magni, excepturi eveniet porro est tenetur nostrum, cupiditate voluptates incidunt fuga nam, necessitatibus nulla iure.</p>
         </aside> <!--FIN ASIDE-->
 
-        <aside>
+        <aside class="segunda">
             <h1>Titulo 3er Columna</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque quis ab quaerat magnam eligendi esse magni, excepturi eveniet porro est tenetur nostrum, cupiditate voluptates incidunt fuga nam, necessitatibus nulla iure.</p>
         </aside> <!--FIN ASIDE-->
